force-app/main/default/objects/leaseworks__Pricing_Run_New__c/leaseworks__Pricing_Run_New__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Commercial Terms</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>