force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Aircraft_in_annual_sale_budget__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_in_annual_sale_budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aircraft in Annual Sale Budget?</label>
    <type>Checkbox</type>
</CustomField>