force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Any_open_issues_with_the_lessee__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Any_open_issues_with_the_lessee__c</fullName>
    <label>Any Open Issues with the Lessee?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>