force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Any_tech_issues_on_lease_post_del_mods__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Any_tech_issues_on_lease_post_del_mods__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any Tech Issues (on lease/post del mods)</label>
    <type>Checkbox</type>
</CustomField>