force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Base_Month__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Base_Month__c</fullName>
    <label>Z_Unused Base Month</label>
    <type>Date</type>
</CustomField>