force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Buyer_Details__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Buyer_Details__c</fullName>
    <label>Buyer Details</label>
    <type>TextArea</type>
</CustomField>