force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Configuration_Deadline__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Configuration_Deadline__c</fullName>
    <label>Configuration Deadline</label>
    <type>Date</type>
</CustomField>