force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Current_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_Rent__c</fullName>
    <inlineHelpText>Rent requested by Airline</inlineHelpText>
    <label>Rent Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>