force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Date_and_Month_of_Dollar__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_and_Month_of_Dollar__c</fullName>
    <label>Date and Month of Dollar</label>
    <type>Date</type>
</CustomField>