force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Date_of_Manufacture_PLB__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_of_Manufacture_PLB__c</fullName>
    <label>Date of Manufacture PLB</label>
    <type>Date</type>
</CustomField>