force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Engine_1st_Run_per_FH__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_1st_Run_per_FH__c</fullName>
    <inlineHelpText>Offer for reserve rate for Engine as per marketing rep</inlineHelpText>
    <label>Engine 1st Run per FH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>