force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Engine_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Manufacturer__c</fullName>
    <inlineHelpText>Engine Manufacturer to be entered by marketing rep</inlineHelpText>
    <label>Z_Unused_2307_Engine Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFM</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>IAE</fullName>
            </value>
            <value>
                <fullName>PW</fullName>
            </value>
            <value>
                <fullName>RR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>