force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Engine_Subsequent_Run_perFH__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Subsequent_Run_perFH__c</fullName>
    <label>Engine Subsequent Run per FH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>