force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Engine_Type_picklist__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Type_picklist__c</fullName>
    <inlineHelpText>Pre-populated from main deal page, and can be changed for this commercial term scenario.</inlineHelpText>
    <label>Z_Unused_2307_Engine Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>leaseworks__Engine_Manufacturer__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CFM56-5B</fullName>
            </value>
            <value>
                <fullName>CFM56-5C</fullName>
            </value>
            <value>
                <fullName>CFM56-7B</fullName>
            </value>
            <value>
                <fullName>LEAP-1A24</fullName>
            </value>
            <value>
                <fullName>LEAP-1A26</fullName>
            </value>
            <value>
                <fullName>LEAP-1A32</fullName>
            </value>
            <value>
                <fullName>LEAP-1A33</fullName>
            </value>
            <value>
                <fullName>LEAP-1B23</fullName>
            </value>
            <value>
                <fullName>LEAP-1B25</fullName>
            </value>
            <value>
                <fullName>LEAP-1B27</fullName>
            </value>
            <value>
                <fullName>LEAP-1B28</fullName>
            </value>
            <value>
                <fullName>LEAP-1B28B1</fullName>
            </value>
            <value>
                <fullName>CFM56-7B22E</fullName>
            </value>
            <value>
                <fullName>CFM56-7B24E</fullName>
            </value>
            <value>
                <fullName>CFM56-7B26E</fullName>
            </value>
            <value>
                <fullName>CFM56-7B27E</fullName>
            </value>
            <value>
                <fullName>V2522-A5</fullName>
            </value>
            <value>
                <fullName>V2524-A5</fullName>
            </value>
            <value>
                <fullName>V2527M-A5</fullName>
            </value>
            <value>
                <fullName>V2527-A5</fullName>
            </value>
            <value>
                <fullName>V2527E-A5</fullName>
            </value>
            <value>
                <fullName>V2530-A5</fullName>
            </value>
            <value>
                <fullName>V2533-A5</fullName>
            </value>
            <value>
                <fullName>PW1000G-1100G-JM</fullName>
            </value>
            <value>
                <fullName>PW1000G-1124G-JM</fullName>
            </value>
            <value>
                <fullName>PW1000G-1127G-JM</fullName>
            </value>
            <value>
                <fullName>PW1000G-1133G</fullName>
            </value>
            <value>
                <fullName>PW1000G-1133G-JM</fullName>
            </value>
            <value>
                <fullName>PW1000G-1135G-JM</fullName>
            </value>
            <value>
                <fullName>Trent 1000-58 B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>