force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Estimated_Transition_Cost__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Estimated_Transition_Cost__c</fullName>
    <label>Estimated Transition Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>