force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Fee_income_Details__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Fee_income_Details__c</fullName>
    <label>Fee Income Details</label>
    <type>TextArea</type>
</CustomField>