force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Fee_income_from_management_or_remktng__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Fee_income_from_management_or_remktng__c</fullName>
    <label>Fee Income - Management or Re-marketing?</label>
    <type>TextArea</type>
</CustomField>