force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__IRR_without_Transition_MR_Sec_Deposit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IRR_without_Transition_MR_Sec_Deposit__c</fullName>
    <label>IRR without Transition/MR/Sec Deposit</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>