force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Lease_NPV_with_MR_and_Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_NPV_with_MR_and_Security_Deposit__c</fullName>
    <label>Lease NPV with MR and Security Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>