force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Legal_Ownership__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Legal_Ownership__c</fullName>
    <label>Legal Ownership</label>
    <type>TextArea</type>
</CustomField>