force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Maintenance_Reserves__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Reserves__c</fullName>
    <inlineHelpText>Maintenance reserve assumption, requested by marketing rep</inlineHelpText>
    <label>Maintenance Reserves</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Letter Of Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>