force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__MR_Base_Year__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Base_Year__c</fullName>
    <label>MR Base Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>