force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__MR_drawings_anticipated_in_next_12_mos__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_drawings_anticipated_in_next_12_mos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MR drawings anticipated in Next 12 Mo?</label>
    <type>Checkbox</type>
</CustomField>