force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__MX_events_before_long_stop_date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MX_events_before_long_stop_date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MX Events before long stop date?</label>
    <type>Checkbox</type>
</CustomField>