force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Notes__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Notes__c</fullName>
    <inlineHelpText>Notes to be added by product configuration team</inlineHelpText>
    <label>Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>