force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Pre_tax_IRR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Pre_tax_IRR__c</fullName>
    <label>Pre-tax IRR</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>