force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Price_As_of_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Price_As_of_Date__c</fullName>
    <inlineHelpText>Date for which Purchase price entered is applicable</inlineHelpText>
    <label>Price As of Date</label>
    <type>Date</type>
</CustomField>