force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Pricing_Comments__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Pricing_Comments__c</fullName>
    <inlineHelpText>Use this box to enter any comments related to this commercial terms scenario.</inlineHelpText>
    <label>Pricing Comments</label>
    <type>TextArea</type>
</CustomField>