force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Rental_1__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rental_1__c</fullName>
    <label>Rental 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>