force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Rental_Type_4__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rental_Type_4__c</fullName>
    <label>Rental Type 4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Float</fullName>
            </value>
            <value>
                <fullName>Floating - Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>