force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Residual_Value_at_Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Residual_Value_at_Lease__c</fullName>
    <label>Blend Residual Value at Lease Maturity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>