force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__ROE_with_MR_and_Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__ROE_with_MR_and_Security_Deposit__c</fullName>
    <label>ROE with MR and Security Deposit</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>