force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Status__c</fullName>
    <inlineHelpText>Approval Status of the Economic Analysis Request</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>PCM Review</fullName>
            </value>
            <value>
                <fullName>Pricing Analysis Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>PCM Review Rejected</fullName>
            </value>
            <value>
                <fullName>Pricing Analysis Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>