force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Swap_Tenor_P__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Swap_Tenor_P__c</fullName>
    <label>Swap Tenor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Month LIBOR</fullName>
            </value>
            <value>
                <fullName>3 Month LIBOR</fullName>
            </value>
            <value>
                <fullName>6 Month LIBOR</fullName>
            </value>
            <value>
                <fullName>2 Year Swap</fullName>
            </value>
            <value>
                <fullName>3 Year Swap</fullName>
            </value>
            <value>
                <fullName>4 Year Swap</fullName>
            </value>
            <value>
                <fullName>5 Year Swap</fullName>
            </value>
            <value>
                <fullName>6 Year Swap</fullName>
            </value>
            <value>
                <fullName>7 Year Swap</fullName>
            </value>
            <value>
                <fullName>8 Year Swap</fullName>
            </value>
            <value>
                <fullName>9 Year Swap</fullName>
            </value>
            <value>
                <fullName>10 Year Swap</fullName>
            </value>
            <value>
                <fullName>12 Year Swap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>