force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Total_Base_Rent_inc_NVA__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Base_Rent_inc_NVA__c</fullName>
    <formula>leaseworks__Base_Rent__c + leaseworks__NVA_Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Base Rent and additional rent taking into consideration NVA</inlineHelpText>
    <label>Total Base Rent (inc NVA)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>