force-app/main/default/objects/leaseworks__Pricing_Run_New__c/fields/leaseworks__Type_Variant__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type_Variant__c</fullName>
    <inlineHelpText>In the left box, select type-variants to be priced on this commercial terms scenario, then click the right-pointing arrow. To remove, select the type-variant from the right-side box and click the left-pointing arrow.</inlineHelpText>
    <label>Z_Unused_2307_Type-Variant</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>leaseworks__Engine_Type_picklist__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CF34-10E5</fullName>
            </value>
            <value>
                <fullName>CF34-10E5A1</fullName>
            </value>
            <value>
                <fullName>CF34-10E6</fullName>
            </value>
            <value>
                <fullName>CF34-10E7</fullName>
            </value>
            <value>
                <fullName>CF34-3A1</fullName>
            </value>
            <value>
                <fullName>CF34-3B1</fullName>
            </value>
            <value>
                <fullName>CF6-80C2B1F</fullName>
            </value>
            <value>
                <fullName>CF6-80C2B5F</fullName>
            </value>
            <value>
                <fullName>CF6-80C2B6</fullName>
            </value>
            <value>
                <fullName>CF6-80C2B6F</fullName>
            </value>
            <value>
                <fullName>CF6-80C2B7F</fullName>
            </value>
            <value>
                <fullName>CFM56-3C1 (Cat A)</fullName>
            </value>
            <value>
                <fullName>CFM56-3C1 (Cat B)</fullName>
            </value>
            <value>
                <fullName>CFM56-3C1 (Cat C)</fullName>
            </value>
            <value>
                <fullName>CFM56-5A1</fullName>
            </value>
            <value>
                <fullName>CFM56-5A1F</fullName>
            </value>
            <value>
                <fullName>CFM56-5A3</fullName>
            </value>
            <value>
                <fullName>CFM56-5A5/F</fullName>
            </value>
            <value>
                <fullName>CFM56-5B1/3</fullName>
            </value>
            <value>
                <fullName>CFM56-5B1/P</fullName>
            </value>
            <value>
                <fullName>CFM56-5B2</fullName>
            </value>
            <value>
                <fullName>CFM56-5B2/P</fullName>
            </value>
            <value>
                <fullName>CFM56-5B3/2P</fullName>
            </value>
            <value>
                <fullName>CFM56-5B3/3</fullName>
            </value>
            <value>
                <fullName>CFM56-5B3/P</fullName>
            </value>
            <value>
                <fullName>CFM56-5B4</fullName>
            </value>
            <value>
                <fullName>CFM56-5B4/3</fullName>
            </value>
            <value>
                <fullName>CFM56-5B4/P</fullName>
            </value>
            <value>
                <fullName>CFM56-5B5</fullName>
            </value>
            <value>
                <fullName>CFM56-5B5/P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>