force-app/main/default/objects/leaseworks__Pricing_Run_New__c/recordTypes/leaseworks__Campaign.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Campaign</fullName>
    <active>false</active>
    <label>Z_Unused Campaign</label>
</RecordType>