force-app/main/default/objects/leaseworks__Pricing_Run_New__c/recordTypes/leaseworks__Engine_Other.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Engine_Other</fullName>
    <active>true</active>
    <label>Engine (Other)</label>
</RecordType>