force-app/main/default/objects/leaseworks__Pricing_Run_New__c/recordTypes/leaseworks__Lease.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Lease</fullName>
    <active>true</active>
    <label>Lease</label>
</RecordType>