force-app/main/default/objects/leaseworks__Pricing_Run_New__c/recordTypes/leaseworks__Purchase.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Purchase</fullName>
    <active>true</active>
    <label>Purchase</label>
</RecordType>