force-app/main/default/objects/leaseworks__Pricing_Run_New__c/recordTypes/leaseworks__SLB.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__SLB</fullName>
    <active>true</active>
    <label>SLB</label>
</RecordType>