force-app/main/default/objects/leaseworks__Pricing_Run_New__c/recordTypes/leaseworks__Transaction.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Transaction</fullName>
    <active>false</active>
    <label>Z_Unused Transaction</label>
</RecordType>