force-app/main/default/objects/leaseworks__Pricing_Run_New__c/validationRules/leaseworks__CommercialTermNameValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__CommercialTermNameValidation</fullName>
    <active>false</active>
    <description>This validation rule is to validate the record for the Name field.</description>
    <errorConditionFormula>false /*ISBLANK(Name)*/</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please specify a name for Commercial Term.</errorMessage>
</ValidationRule>